force-app/main/default/objects/Fund__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LookUp to account to check where the money has been invested</description>
    <inlineHelpText>Name of the Account associated with this Fund. Select via Lookup or create New</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>