force-app/main/default/objects/Fund__c/fields/ROI_Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ROI_Profit_Amount__c</fullName>
    <label>ROI Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>