force-app/main/default/objects/Fund__c/fields/STI__c.field-meta.xml
<CustomField>
    <fullName>STI__c</fullName>
    <inlineHelpText>Total Amount Invested by SPM in the Fund.</inlineHelpText>
    <label>SPM Total Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>